# ESP32_MQTT

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  TUTORIAL.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  modem_http_config.c
main/4g/: modem_4g.c  modem_4g.h
main/OTA/: ota.c  ota.h
main/RGB_LED/: led.c
main/data_manager/: data_model.c  data_model.h  json_wrapper.c  json_wrapper.h
main/gps/: gps.c  gps.h  nmea_parser.c
main/http_server/: modem_http_config.c  modem_http_config.h
main/mqtt_client/: mqtt.c  mqtt.h
main/network_manager/: network_manager.c  network_manager.h  wifi_manager.c  wifi_manager.h
main/rgb_led/: led.c  led.h
main/sensors/: gy26.c  gy26.h  sensors.c  sensors.h
main/time/: time_sync.c  time_sync.h
spiffs/: index.html  login.html  mqtt_topics.html  sensors.html  wifi_sta.html  wlan.html
spiffs/css/: style.css
spiffs/js/: index.js  login.js  mqtt_topics.js  sensors.js  wifi_sta.js  wlan.js
